force-app/main/default/objects/Messaging_Snapshot__c/Messaging_Snapshot__c.object-meta.xml
<CustomObject>
    <description>generate one per month per funding award</description>
    <label>Messaging Snapshot</label>
    <nameField>
        <displayFormat>MS-{000000}</displayFormat>
        <label>Message Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messaging Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>