force-app/main/default/objects/Messaging_Snapshot__c/fields/Average_Read_Time_By_DP__c.field-meta.xml
<CustomField>
    <fullName>Average_Read_Time_By_DP__c</fullName>
    <inlineHelpText>In seconds</inlineHelpText>
    <label>Average Read Time By DP</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>