force-app/main/default/objects/Messaging_Snapshot__c/fields/Number_Of_Threads__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Threads__c</fullName>
    <description>Number of child contexts plus the parent context on this parent context</description>
    <inlineHelpText>Number of child contexts plus the parent context on this parent context</inlineHelpText>
    <label>Number Of Threads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>