force-app/main/default/objects/Messaging_Snapshot__c/fields/Snapshot_Id__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Id__c</fullName>
    <description>Concatenation of the funding award and the date</description>
    <externalId>true</externalId>
    <label>Snapshot Id</label>
    <length>28</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>